// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Area using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot area"
      clip-path="url(#clip-path-test)"
    >
      <path
        class="area"
        d="M0,100L20,75L40,50L60,75L60,100L40,100L20,100L0,100Z                                                                                                      "
        style="fill: rgba(153, 193, 220, 0.7); stroke: rgba(107, 135, 154, 0.7); pointer-events: none;"
      />
      <path
        class="area"
        d="M0,100L100,100L100,100L0,100Z"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Area using SVG should skip rendering if there is no x scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot area"
      clip-path="url(#clip-path-test)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Area using SVG should skip rendering if there is no y scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot area"
      clip-path="url(#clip-path-test)"
    />
  </svg>
</DocumentFragment>
`;
